# MapCoder-Hackercup

./: .env.example.ollama  .env.example.ollama_and_vllm  .gitignore  README.md  pyproject.toml  requirements.txt  stringify.py
data/: Omkar_and_Tours_variation.txt
data/Live/debugData/: improvementData.json
data/Live/debugData/debug/: full_in.txt  sample_in.txt  (+2 more)
src/: main.py
src/constants/: paths.py
src/datasets/: DatasetFactory.py  HackercupDataset.py  convert-hackercup-xcode.py
src/mapcoder_hackercup/: __main__.py  api_comm_test.py  evaluate-et-dataset.py  gen-eval-plus-sample.py  gen_comp_out.py  gen_rag_embeddings.py  score_results.py
src/mapcoder_hackercup/constants/: lang_mappings.py  paths.py
src/mapcoder_hackercup/datasets/: APPSDataset.py  CodeContestDataset.py  Dataset.py  DatasetFactory.py  HackercupDataset.py  HumanEvalDataset.py  Live.py  MBPPDataset.py  XCodeDataset.py  convert-hackercup-xcode.py
src/mapcoder_hackercup/evaluations/: api_comm.py  evalute.py  resource_limit.py
src/mapcoder_hackercup/models/: Base.py  Claude.py  ModelFactory.py  Ollama.py  OpenAI.py
src/mapcoder_hackercup/promptings/: Analogical.py  Base.py  Baseline.py  CoT.py  Custom.py  Custom_DirectPlanning.py  Custom_DirectPlanning_KShotCode.py  Direct.py  Joe.py  MapCoder.py  MapCoder_CodeGenOnly.py  Matus.py  Matus_ParallelCode.py  PromptingFactory.py  SelfPlanning.py  Zac.py  utils.py
src/mapcoder_hackercup/results/: Results.py  __init__.py
src/mapcoder_hackercup/utils/: jsonl.py
src/models/: ModelFactory.py  Ollama.py
src/promptings/: MapCoder.py
(+14 files in other folders)
